# color-mixer

./: .env.sample  .gitignore  Makefile  README.md  note.txt  pyproject.toml
core/: config.py  extract_rw.py  main.py  models.py  schemas.py
core/deprecated/: extract_rw.py
core/services/: gamma.py  hw_client.py  mix.py
docs/report/: .gitignore  main.tex  refs.bib
hardware/TCS34725/: main.ino
hardware/TCS34725-caliberation/: TCS34725-RPI-test.py  TCS34725-caliberation.ino
hw_agent/: calibration.py  calibration_TCS.py  main.py  models.py  schemas.py  utilities.py  utils.py
hw_agent/data/: palette.json
hw_agent/drivers/: colorsensor.py  pump.py
hw_agent/services/: calibration.py  color.py  dose.py  palette.py
schemas/: core.json  hw_agent.json
tests/: mixbox-test.py
ui/: app.py  callbacks.py  config.py  mixerUI.py  services.py  utils.py
web/: .env.sample  README.md  index.html  package-lock.json  package.json
web/src/: App.vue  main.js
web/src/components/: ColorCard.vue  ColorCardGrid.vue
