[project]
requires-python = ">=3.12,<3.13"
name = "color-mixer"
version = "0.1.0"
description = ""
authors = [{ name = "AaronWu-train", email = "aaronwu0218@gmail.com" }]
license = "MIT"
readme = "README.md"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "black (>=25.1.0,<26.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "fastapi-code-generator (>=0.5.4,<0.6.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "core" }, { include = "hw_agent" }, { include = "ui" }]
